2011-08-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css: Fixed height on css header attributes.

2011-08-10  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/groups/modu_group_list.php: added pagination to list.
	
	Fixes: #3389009

2011-08-09 Javier Lanz <javier.lanz@artica.es>

	* operation/incidents/incident.incident.php,
	operation/incidents/incident.files.php,
	operation/incidents/incident.tracking.php,
	operation/incidents/incident.workunits.php,
	operation/incidents/incident.download_file.php,
	operation/incidents/incident.list.php: Deleted.

	* operation/incidents/incident.php,
	operation/incidents/incident_detail.php: Restored from a previous
	version due an incident moving and copying files.


2011-08-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/module_groups.php: Add tooltip message when a module group
	doesn't have alerts or are not fired.

	Fixes: #3388455

2011-08-09  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/control: fixed the name of package and update version number.

2011-08-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/users_connected.php: Added a call to io_safe_input() function
	in order to retrieve users connected.

	Fixes: #3388470

2011-08-09  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/groups/group_list.php: Added groups must have a name and be unique.

2011-08-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/groups/group_list.php: Added db_clean_cache() in order
	to refresh query results in this view.  

	Fixes: #3388480

2011-08-09  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql, extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added
	  another index on tevento.estado. Thanks Manuel! :-)

2011-08-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/help/en/help_agent_status.php
	include/help/es/help_agent_status.php
	include/help/ja/help_agent_status.php: Fixes style on this view. 

	Fixes: #3371438
