@@ -236,10 +236,9 @@ div#menu {
 div#head {
 	font-size: 8pt;
 	width: 960px;
-	height: 70px; /*height: 60px;*/
+	height: 62px; 
 	padding-top: 1px;
 	background: url(../../images/header.jpg);
-	border-bottom: solid 1px #000;
 }
 
 div#foot {
